2002-02-08  Derek Atkins <warlord@MIT.EDU>

	* New Search GUI committed to the repository, with a search test
	available in the extensions menu to show how it works.  More to
	come as more core datatypes get supported.

2002-02-03  Derek Atkins <warlord@MIT.EDU>

	* Updated QueryNew interface.  Provide a GSList of terms in order
	to specify queries like "entry->order->owner->guid == XXX".
	Update the business objects to the new API.

	* Fix queryNew bug: various merging routines did not save the list
	of books.

	* add basic QueryNew tests

2002-02-03  Derek Atkins <warlord@MIT.EDU>

	* src/engine/gncObject.c: core object registration.

	* src/engine/gnc-book.c: call into the object registration whenver
	a book is created or destroyed.

	* src/engine/gnc-engine.c: initialize the object registration and
	QueryNew subsystems.
	
	* first revision of the "QueryNew" interface.  Note that the
	interface is not complete -- in fact, the API will be changing
	this afternoon, but I wanted a baseline (working) system checked
	into the repository.  Right now only the business code is using
	the new query -- the old query still exists, so you should see no
	functional difference in anything except the business code.

2002-01-29  Dave Peticolas  <dave@krondo.com>

	* src/report/standard-reports/account-piecharts.scm: bump up default
	pie chart height

	* src/bin/overrides/gnucash-env.in: set LTDL_LIBRARY_PATH, too

	* macros/gnome-gdk-pixbuf.m4: fix bug

2002-01-12  Dave Peticolas  <dave@krondo.com>

	* src/engine/gw-glib-spec.scm: remove

	* src/engine/gw-engine-spec.scm: g-wrap split & trans lookup

	* src/engine/gnc-engine-util.h: add more timing utils

	* src/engine/gnc-engine-util.c: add more timing utils

	* src/engine/Transaction.h: g-wrap split & trans lookup

	* src/engine/Transaction.c: g-wrap split & trans lookup

	* src/engine/Makefile.am: Take out glib wrapping cruft

2002-01-09  Rob Browning  <rlb@defaultvalue.org>
