@@ -242,15 +242,17 @@
 	(commodity-row-helper! 
 	 my-name #f
 	 (if balance 
-	     (balance 'getmonetary report-commodity reverse-balance?)
+	     (gnc:commodity-collector-assoc 
+	      balance report-commodity reverse-balance?)
 	     #f)
 	 main-row-style)
 	;; Special case for stock-accounts: then the foreign commodity
 	;; gets displayed in this line rather then the following lines
 	;; (loop below). Is also used if is-stock-account? is true.
 	(let ((my-balance 
-	       (if balance (balance 'getmonetary 
-				    my-commodity reverse-balance?) #f)))
+	       (if balance 
+		   (gnc:commodity-collector-assoc 
+		    balance my-commodity reverse-balance?) #f)))
 	  (set! already-printed my-commodity)
 	  (commodity-row-helper! 
 	   my-name
@@ -262,8 +264,8 @@
     ;; balance and its corresponding value in the
     ;; report-currency. One row for each non-report-currency. 
     (if (and balance (not is-stock-account?))
-	(balance 
-	 'format 
+	(gnc:commodity-collector-map
+	 balance 
 	 (lambda (curr val)
 	   (if (or (gnc:commodity-equiv? curr report-commodity)
 		   (and already-printed
@@ -281,7 +283,7 @@
 		  bal
 		  (exchange-fn bal report-commodity)
 		  other-rows-style))))
-	 #f))))
+	 ))))
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -355,7 +357,7 @@
 	 show-col-headers?
 	 show-total? get-total-fn
 	 total-name group-types? show-parent-balance? show-parent-total? 
-	 show-other-curr? report-commodity exchange-fn)
+	 show-other-curr? report-commodity exchange-fn show-zero-entries?)
   (let ((table (gnc:make-html-table))
 	(topl-accounts (gnc:group-get-account-list 
 			(gnc:get-current-group))))
@@ -379,31 +381,41 @@
     ;; Additional function that includes the subaccounts as
     ;; well. Note: It is necessary to define this here (instead of
     ;; changing an argument for account-get-balance) because the
-    ;; show-acct? query is needed.
+    ;; use-acct? query is needed.
     (define (my-get-balance account)
       ;; this-collector for storing the result
       (let ((this-collector (my-get-balance-nosub account)))
 	(for-each 
 	 (lambda (x) (if x 
-			 (this-collector 'merge x #f)))
+			 (gnc:commodity-collector-merge 
+			  this-collector x )))
 	 (gnc:group-map-all-accounts
 	  (lambda (a)
 	    ;; Important: Calculate the balance if and only of the
-	    ;; account a is shown, i.e. (show-acct? a) == #t.
-	    (and (show-acct? a)
+	    ;; account a is shown, i.e. (use-acct? a) == #t.
+	    (and (use-acct? a)
 		 (my-get-balance-nosub a)))
 	  (gnc:account-get-children account)))
 	this-collector))
 
-    ;; show this account? Check against the account selection and,
-    ;; if not selected, show-subaccts?==#t and any parent was
-    ;; selected. (Maybe the other way around is more effective?)
-    (define (show-acct? a)
+    ;; Use this account in the account hierarchy? Check against the
+    ;; account selection and, if not selected, show-subaccts?==#t and
+    ;; any parent was selected. (Maybe the other way around is more
+    ;; effective?)
+    (define (use-acct? a)
       (or (member a accounts)
 	  (and show-subaccts? 
 	       (let ((parent (gnc:account-get-parent-account a)))
 		 (and parent
 		      (show-acct? parent))))))
+
+    ;; Show this account? Only if nonzero amount or appropriate
+    ;; preference.
+    (define (show-acct? a)
+      (and (or show-zero-entries?
+	       (not (gnc:commodity-collector-allzero? 
+		     (my-get-balance a))))
+	   (use-acct? a)))
 
     ;; sort an account list. Currently this uses only the account-code
     ;; field, but anyone feel free to add more options to this.
@@ -532,7 +544,7 @@
 				  subaccounts my-get-balance 
 				  gnc:account-reverse-balance?)))
 		 (if thisbalance 
-		     (subbalance 'merge thisbalance #f))
+		     (gnc:commodity-collector-merge subbalance thisbalance))
 		 subbalance)
 	       heading-style
 	       #t #f)))))
@@ -549,11 +561,12 @@
 	  (for-each 
 	   (lambda (acct)
 	     (let ((subaccts (filter 
-			      show-acct?
+			      use-acct?
 			      (gnc:account-get-immediate-subaccounts acct))))
 	       (if (or (= current-depth tree-depth) (null? subaccts))
 		   (begin
-		     (add-account-rows! acct current-depth alternate)
+		     (if (show-acct? acct)
+			 (add-account-rows! acct current-depth alternate))
 		     (set! alternate (not alternate)))
 		   (add-group! current-depth 
 			       (gnc:html-account-anchor acct)
@@ -580,7 +593,7 @@
 	;; No extra grouping. 
 	;; FIXME: go through accounts even if not
 	;; shown, because the children might be shown.
-	(traverse-accounts! (filter show-acct? topl-accounts) 1))
+	(traverse-accounts! (filter use-acct? topl-accounts) 1))
 
     (remove-last-empty-row)
 
@@ -591,7 +604,7 @@
 	   table "grand-total" (* (if show-other-curr? 3 2) tree-depth))
           (add-subtotal-row! 
            1 total-name 
-           (get-total-fn (filter show-acct? topl-accounts) my-get-balance)
+           (get-total-fn (filter use-acct? topl-accounts) my-get-balance)
 	   "grand-total"
            #t #f)))
     
